# product-lookup-poc-Crawl4AI

./: .gitignore  Dockerfile  Readme.md  docker-compose.yml  pyproject.toml
src/productlookup/: __init__.py  exceptions.py  main.py
src/productlookup/config/: __init__.py  crawler_config.json  medical_lab_config.json  settings.py
src/productlookup/controller/: __init__.py  product_search_servicer.py
src/productlookup/protos/: product_search.proto  product_search_pb2.py  product_search_pb2_grpc.py
src/productlookup/services/: __init__.py  google_search.py  ollama_content_filter.py  product_crawler_service.py  web_crawler.py
